--- a/views/songDetails.ejs
+++ b/views/songDetails.ejs
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/styles/musicPlayer.css">
   <title>Song Details</title>
 </head>
 <body>
 
 <h1><%= title %></h1>
-<img src="<%= thumbnail %>" width="300" />
+<img class="imageYoutube" src="<%= thumbnail %>" width="300" />
 
 <p><strong>Artist / Channel:</strong> <%= artist %></p>
 <p><strong>Views:</strong> <%= views %></p>
@@ -17,15 +19,17 @@
 <p><strong>Description:</strong></p>
 <p><%= description %></p>
 
-<iframe
-  width="560"
-  height="315"
-  src="https://www.youtube.com/embed/<%= videoId %>"
-  allowfullscreen>
-</iframe>
+<div class="iframeContainer">
+  <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/<%= videoId %>"
+    allowfullscreen>
+  </iframe>
+</div>
 
 <br /><br />
-<a href="/playlist">Back to Playlist</a>
+<a href="/playlist" class="secondaryLink">Back to Playlist</a>
 
 </body>
 </html>
