--- a/views/musicDetails.ejs
+++ b/views/musicDetails.ejs
@@ -29,10 +29,12 @@
     <label>
     Genre:
     <select name="genre">
+    <option>Gospel</option>
     <option>Rock</option>
-    <option>Pop</option>
+    <option>Classical</option>
     <option>Jazz</option>
     <option>Hip-Hop</option>
+    
     </select>
     </label><br /><br />
     <!-- submit button -->
